==========================================================
The current maintainer of this library is the
RIPE NCC information services department.

You can reach us at https://bitbucket.org/ripencc/bgpdump

PLEASE DO NOT E-MAIL INDIVIDUAL DEVELOPERS ABOUT
ISSUES, AS YOUR E-MAIL MAY BE LOST
==========================================================

2015-07-16 Max Lapan <mlapan@ripe.net>
	* -p option to show packet index

2011-01-25 Devin Bayer <dbayer@ripe.net>
	* move development to bitbucket

2010-10-21 Devin Bayer <dbayer@ripe.net> v1.4.99.13
	* fix configure script for Darwin

2010-09-24 Devin Bayer <dbayer@ripe.net> v1.4.99.12
	* Remove --disable-ipv6 flag
        * Fix parsing of IPv6 NEXT_HOP attributes
        * Add clearer command-line options
        * Add logging to STDERR
        * Add dumping to files instead of STDOUT
        * Add regression test suite

2009-11-24 Roman Kalyakin <roman@ripe.net> v1.4.99.11
	* Fixed incorrect output when running with -m which was
	  introduced by a change in one of the previous versions.
	  (issue IS-439)

2009-10-13 Ruben van Staveren <ruben@ripe.net>
	* Fix segfaults with empty AS path on -m/-M 
	  (issue IS-292)
	  Patch contributed by Lorenzo Colitti <lorenzo@google.com> 

2009-07-29 Erik Romijn <eromijn@ripe.net>
	* Fixing incorrect as path length count in case of AS_(CONFED_)SEQUENCE
	  (issue IS-141)
	  Patch contributed by Toby Ehrenkranz <tehrenkr@cs.uoregon.edu>
	* Added support for the ORIGINATOR_ID and CLUSTER_LIST attributes
	  (issue IS-181)
	  Patch contributed by Maurizio Pizzonia <pizzonia@dia.uniroma3.it>
	* Fixed signedness of MED and localpref (issue IS-180)
	  Patch contributed by Steve Hill <cheesy@sackheads.org>
	* Implemented conditional checking for compression libraries (issue IS-179)
	  Patch contributed by Steve Hill <cheesy@sackheads.org>

2009-07-27 Ruben van Staveren <ruben@ripe.net>
	* Enabled extra compiler warnings
	* Fixed some potentially unsafe constructs (pointer arithmetic,