@@ -366,13 +366,24 @@ void process(BGPDUMP_ENTRY *entry) {
 	    {
 		case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
 		case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+		case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+		case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
 
 		    switch(entry->body.zebra_message.type) 
 		    {
 			case BGP_MSG_UPDATE:
 			   if (mode ==0)
 		    	   {
-				printf("TYPE: BGP4MP/MESSAGE/Update\n");	 
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("TYPE: BGP4MP/MESSAGE/Update\n");
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("TYPE: BGP4MP/MESSAGE_LOCAL/Update\n");
+						break;
+				}
 				if (entry->body.zebra_message.source_as)
 			        {
 					printf("FROM:");
@@ -555,7 +566,17 @@ void process(BGPDUMP_ENTRY *entry) {
 			case BGP_MSG_OPEN:
 			    if (mode != 0)
 				    break;
-		            printf("TYPE: BGP4MP/MESSAGE/Open\n");
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("TYPE: BGP4MP/MESSAGE/Open\n");
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("TYPE: BGP4MP/MESSAGE_LOCAL/Open\n");
+						break;
+				}
+
 			    if (entry->body.zebra_message.source_as)
 			    {
 				printf("FROM:");
@@ -609,7 +630,16 @@ void process(BGPDUMP_ENTRY *entry) {
 			case BGP_MSG_NOTIFY:
 			    if (mode != 0)
 				    break;
-			    printf("TYPE: BGP4MP/MESSAGE/Notify\n");
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("TYPE: BGP4MP/MESSAGE/Notify\n");
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("TYPE: BGP4MP/MESSAGE_LOCAL/Notify\n");
+						break;
+				}
 			    if (entry->body.zebra_message.source_as)
 			    {
 				printf("FROM:");
@@ -782,7 +812,16 @@ void process(BGPDUMP_ENTRY *entry) {
 			    	if ( mode != 0)
 					break;
 
-			    	printf("TYPE: BGP4MP/MESSAGE/Keepalive\n");
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("TYPE: BGP4MP/MESSAGE/Keepalive\n");
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("TYPE: BGP4MP/MESSAGE_LOCAL/Keepalive\n");
+						break;
+				}
 				if (entry->body.zebra_message.source_as)
 				{
 					printf("FROM:");
@@ -1249,24 +1288,47 @@ static void table_line_withdraw(struct prefix *prefix,int count,BGPDUMP_ENTRY *e
 	
 	for (idx=0;idx<count;idx++)
 	{
-            show_line_prefix("BGP4MP", entry->time, time_str, "W");
-            switch(entry->body.zebra_message.address_family)
-            {
+		switch(entry->subtype) {
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+				show_line_prefix("BGP4MP", entry->time, time_str, "W");
+				switch(entry->body.zebra_message.address_family) {
 #ifdef BGPDUMP_HAVE_IPV6
-            case AFI_IP6:
-                printf("%s|%u|",
-                       fmt_ipv6(entry->body.zebra_message.source_ip,buf),
-                       entry->body.zebra_message.source_as);
-                break;
+					case AFI_IP6:
+						printf("%s|%u|",
+							fmt_ipv6(entry->body.zebra_message.source_ip,buf),
+							entry->body.zebra_message.source_as);
+						break;
 #endif
-            case AFI_IP:
-            default:
-                printf("%s|%u|",
-                       inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),
-                       entry->body.zebra_message.source_as);
-                break;
-            }
-            printf("%s/%d\n",inet_ntoa(prefix[idx].address.v4_addr),prefix[idx].len);
+            				case AFI_IP:
+            				default:
+                				printf("%s|%u|",
+                       					inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),
+                       					entry->body.zebra_message.source_as);
+                				break;
+				}
+				break;
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+				show_line_prefix("BGP4MP_LOCAL", entry->time, time_str, "W");
+				switch(entry->body.zebra_message.address_family) {
+#ifdef BGPDUMP_HAVE_IPV6
+					case AFI_IP6:
+						printf("%s|%u|",
+							fmt_ipv6(entry->body.zebra_message.destination_ip,buf),
+							entry->body.zebra_message.destination_as);
+						break;
+#endif
+            				case AFI_IP:
+            				default:
+                				printf("%s|%u|",
+                       					inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),
+                       					entry->body.zebra_message.destination_as);
+                				break;
+				}
+				break;
+		}
+		printf("%s/%d\n",inet_ntoa(prefix[idx].address.v4_addr),prefix[idx].len);
         }
 }
 
@@ -1280,23 +1342,46 @@ static void table_line_withdraw6(struct prefix *prefix,int count,BGPDUMP_ENTRY *
 
 	for (idx=0;idx<count;idx++)
 	{
-            show_line_prefix("BGP4MP", entry->time, time_str, "W");
-            switch(entry->body.zebra_message.address_family)
-            {
-            case AFI_IP6:
-                printf("%s|%u|%s/%d\n",
-                       fmt_ipv6(entry->body.zebra_message.source_ip,buf1),
-                       entry->body.zebra_message.source_as,
-                       fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
-                break;
-            case AFI_IP:
-            default:
-                printf("%s|%u|%s/%d\n",
-                       fmt_ipv4(entry->body.zebra_message.source_ip,buf1),
-                       entry->body.zebra_message.source_as,
-                       fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
-                break;
-            }
+		switch(entry->subtype) {
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+				show_line_prefix("BGP4MP", entry->time, time_str, "W");
+				switch(entry->body.zebra_message.address_family) {
+					case AFI_IP6:
+						printf("%s|%u|%s/%d\n",
+							fmt_ipv6(entry->body.zebra_message.source_ip,buf1),
+							entry->body.zebra_message.source_as,
+							fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
+						break;
+            				case AFI_IP:
+            				default:
+						printf("%s|%u|%s/%d\n",
+							fmt_ipv4(entry->body.zebra_message.source_ip,buf1),
+							entry->body.zebra_message.source_as,
+							fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
+                				break;
+				}
+				break;
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+				show_line_prefix("BGP4MP_LOCAL", entry->time, time_str, "W");
+				switch(entry->body.zebra_message.address_family) {
+					case AFI_IP6:
+						printf("%s|%u|%s/%d\n",
+							fmt_ipv6(entry->body.zebra_message.destination_ip,buf1),
+							entry->body.zebra_message.destination_as,
+							fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
+						break;
+            				case AFI_IP:
+            				default:
+						printf("%s|%u|%s/%d\n",
+							fmt_ipv4(entry->body.zebra_message.destination_ip,buf1),
+							entry->body.zebra_message.destination_as,
+							fmt_ipv6(prefix[idx].address,buf),prefix[idx].len);
+                				break;
+				}
+				break;
+		}
         }	
 }
 #endif
@@ -1317,19 +1402,46 @@ static void table_line_announce(struct prefix *prefix,int count,BGPDUMP_ENTRY *e
 
 	for (idx=0;idx<count;idx++)
 	{
-                show_line_prefix("BGP4MP", entry->time, time_str, "A");
+		switch(entry->subtype) {
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+				show_line_prefix("BGP4MP", entry->time, time_str, "A");
+				break;
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+				show_line_prefix("BGP4MP_LOCAL", entry->time, time_str, "A");
+				break;
+		}
 		if (mode == 1)
 		{
 			switch(entry->body.zebra_message.address_family)
 			{
 #ifdef BGPDUMP_HAVE_IPV6
 			case AFI_IP6:
-				printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 #endif
 			case AFI_IP:
 			default:
-				printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 			}
 			printf("%s/%d|%s|%s|",inet_ntoa(prefix[idx].address.v4_addr),prefix[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
@@ -1357,12 +1469,30 @@ static void table_line_announce(struct prefix *prefix,int count,BGPDUMP_ENTRY *e
 			{
 #ifdef BGPDUMP_HAVE_IPV6
 			case AFI_IP6:
-				printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 #endif
 			case AFI_IP:
 			default:
-				printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 			}
 			printf("%s/%d|%s|%s\n",inet_ntoa(prefix[idx].address.v4_addr),prefix[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
@@ -1386,7 +1516,16 @@ static void table_line_announce_1(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY
 
 	for (idx=0;idx<count;idx++)
 	{
-                show_line_prefix("BGP4MP", entry->time, time_str, "A");
+		switch(entry->subtype) {
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+				show_line_prefix("BGP4MP", entry->time, time_str, "A");
+				break;
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+				show_line_prefix("BGP4MP_LOCAL", entry->time, time_str, "A");
+				break;
+		}
 		if (mode == 1)
 		{
 			if (entry->attr->flag & ATTR_FLAG_BIT(BGP_ATTR_MP_REACH_NLRI))
@@ -1395,12 +1534,30 @@ static void table_line_announce_1(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY
 				{
 #ifdef BGPDUMP_HAVE_IPV6
 				case AFI_IP6:
-					printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+					switch(entry->subtype) {
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+							printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+							break;
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+							printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf),entry->body.zebra_message.destination_as);
+							break;
+					}
 					break;
 #endif
 				case AFI_IP:
 				default:
-					printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+					switch(entry->subtype) {
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+							printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+							break;
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+							printf("%s|%u|",inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),entry->body.zebra_message.destination_as);
+							break;
+					}
 					break;
 				}
 				printf("%s/%d|%s|%s|",inet_ntoa(prefix->nlri[idx].address.v4_addr),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
@@ -1426,12 +1583,30 @@ static void table_line_announce_1(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY
 				{
 #ifdef BGPDUMP_HAVE_IPV6
 				case AFI_IP6:
-					printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+					switch(entry->subtype) {
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+							printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+							break;
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+							printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf),entry->body.zebra_message.destination_as);
+							break;
+					}
 					break;
 #endif
 				case AFI_IP:
 				default:
-					printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+					switch(entry->subtype) {
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+							printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+							break;
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+						case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+							printf("%s|%u|",inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),entry->body.zebra_message.destination_as);
+							break;
+					}
 					break;
 				}
 				printf("%s/%d|%s|%s|",inet_ntoa(prefix->nlri[idx].address.v4_addr),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
@@ -1463,12 +1638,30 @@ static void table_line_announce_1(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY
 			{
 #ifdef BGPDUMP_HAVE_IPV6
 			case AFI_IP6:
-				printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 #endif
 			case AFI_IP:
 			default:
-				printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.source_ip.v4_addr),entry->body.zebra_message.source_as);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|",inet_ntoa(entry->body.zebra_message.destination_ip.v4_addr),entry->body.zebra_message.destination_as);
+						break;
+				}
 				break;
 			}
 			printf("%s/%d|%s|%s\n",inet_ntoa(prefix->nlri[idx].address.v4_addr),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
@@ -1496,7 +1689,16 @@ static void table_line_announce6(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY 
 
 	for (idx=0;idx<count;idx++)
 	{
-                show_line_prefix("BGP4MP", entry->time, time_str, "A");
+		switch(entry->subtype) {
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+				show_line_prefix("BGP4MP", entry->time, time_str, "A");
+				break;
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+			case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+				show_line_prefix("BGP4MP_LOCAL", entry->time, time_str, "A");
+				break;
+		}
 		if (mode == 1)
 		{
 			switch(entry->body.zebra_message.address_family)
@@ -1510,7 +1712,16 @@ static void table_line_announce6(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY 
 	            if( (entry->attr->flag & ATTR_FLAG_BIT(BGP_ATTR_MULTI_EXIT_DISC) ) ==0)
 	            nmed=0;
 			    
-				printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv6(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv6(entry->body.zebra_message.destination_ip,buf1),entry->body.zebra_message.destination_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+						break;
+				}
 				break;
 			case AFI_IP:
 			default:
@@ -1523,7 +1734,16 @@ static void table_line_announce6(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY 
 	            nmed=0;
 			    
 			//printf("%s|%d|%d|",inet_ntoa(entry->attr->nexthop),nprof,nmed);
-                    printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv4(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv4(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|%s/%d|%s|%s|%s|%u|%u|",fmt_ipv4(entry->body.zebra_message.destination_ip,buf1),entry->body.zebra_message.destination_as,fmt_ipv6(prefix->nlri[idx].address,buf2),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin),fmt_ipv6(prefix->nexthop,buf),npref,nmed);
+						break;
+				}
 				break;
 			}
 			if( (entry->attr->flag & ATTR_FLAG_BIT(BGP_ATTR_COMMUNITIES) ) !=0)	
@@ -1543,11 +1763,29 @@ static void table_line_announce6(struct mp_nlri *prefix,int count,BGPDUMP_ENTRY 
 			switch(entry->body.zebra_message.address_family)
 			{
 			case AFI_IP6:
-				printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv6(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv6(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv6(entry->body.zebra_message.destination_ip,buf1),entry->body.zebra_message.destination_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+						break;
+				}
 				break;
 			case AFI_IP:
 			default:
-				printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv4(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+				switch(entry->subtype) {
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4:
+						printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv4(entry->body.zebra_message.source_ip,buf1),entry->body.zebra_message.source_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+						break;
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_LOCAL:
+					case BGPDUMP_SUBTYPE_ZEBRA_BGP_MESSAGE_AS4_LOCAL:
+						printf("%s|%u|%s/%d|%s|%s\n",fmt_ipv4(entry->body.zebra_message.destination_ip,buf1),entry->body.zebra_message.destination_as,fmt_ipv6(prefix->nlri[idx].address,buf),prefix->nlri[idx].len,attr_aspath(entry->attr),describe_origin(entry->attr->origin));
+						break;
+				}
 				break;
 			}
 		}		
